# wamr-sys

./: .gitmodules  Cargo.toml  build.rs
libiwasm/: CMakeLists.txt
src/: lib.rs
